# pam_obc

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  config.h  config.h.in  config.status  configure  configure.in
etc/: pam_obc.conf
extra/: send-challenge
src/: Makefile  Makefile.am  Makefile.in  pam_obc  pam_obc.c  pam_obc.h  version.h
